# brigid

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  todo.md
.donna/project/: intro.md
.donna/project/core/: architecture.md
.donna/project/work/: polish.md
.github/workflows/: code-checks.yml  release.yml
brigid/: asgi.py  conftest.py
brigid/api/: default_translations.py  http_handlers.py  mcp_handlers.py  middlewares.py  renderers.py  settings.py  sitemaps.py  static_cache.py  utils.py
brigid/api/tests/: test_http_handlers.py  test_middlewares.py
brigid/application/: application.py  settings.py
brigid/cli/: __main__.py  application.py
brigid/cli/commands/: configs.py  static.py  templates.py  validate.py
brigid/core/: api.py  entities.py  errors.py  logging.py  sentry.py  utils.py
brigid/domain/: constants.py  entities.py  html.py  request_context.py  text.py  types.py  urls.py
brigid/domain/tests/: test_html.py  test_text.py  test_urls.py
brigid/jinja2_render/: jinjaglobals.py  settings.py  templates.py
brigid/jinja2_render/static/: main.css
brigid/jinja2_render/tests/: test_templates.py
brigid/jinja2_render/tests/jinja_templates/: test_utils.py
brigid/markdown_render/: markdown_render.py
brigid/markdown_render/processors/: collection_block.py  external_links.py  header_anchors.py  images_block.py  internal_links.py  old_image_markup_validation.py  series_block.py  snippets.py  toml_block.py  youtube_block.py
brigid/markdown_render/processors/tests/: test_external_links.py  test_images_block.py
brigid/mcp/: domain.py  entities.py  resorces.py  resources.py  server.py  settings.py  tools.py  utils.py
brigid/plugins/: entities.py  plugin.py  settings.py  utils.py
brigid/plugins/core/: jinjaglobals.py  plugin.py  settings.py
brigid/plugins/i18n/: default_translations.py  jinjaglobals.py  plugin.py  settings.py
brigid/plugins/include/: plugin.py  settings.py
brigid/plugins/photoswipe/: jinjaglobals.py  plugin.py  settings.py
brigid/plugins/photoswipe/templates/: body_after_content.html  head.html
brigid/plugins/seo/: plugin.py  settings.py
brigid/plugins/seo/templates/: head.html.j2  meta.html.j2
brigid/plugins/theme/: jinjaglobals.py  plugin.py  settings.py
brigid/plugins/theme/static/: main.css
brigid/plugins/theme/templates/: article.html.j2  article_footer.html.j2  article_wide.html.j2  base.html.j2  blog_index.html.j2  footer.html.j2  header.html.j2  languages_links.html.j2  last_posts.html.j2  pagination.html.j2  similar_pages.html.j2  tags_filter.html.j2  utils.html.j2
brigid/plugins/theme/tests/: test_template_utils.py
brigid/renderer/: context.py  markdown_render.py  static_files.py
brigid/renderer/processors/: collection_block.py  external_links.py  header_anchors.py  images_block.py  internal_links.py  old_image_markup_validation.py  series_block.py  snippets.py  toml_block.py  youtube_block.py
brigid/renderer/processors/tests/: test_external_links.py  test_images_block.py
brigid/theme/: default_translations.py  entities.py  jinjaglobals.py  settings.py  templates.py  utils.py
brigid/theme/static/: main.css
brigid/theme/templates/: article.html.j2  article_footer.html.j2  article_wide.html.j2  base.html.j2  blog_index.html.j2  footer.html.j2  header.html.j2  languages_links.html.j2  last_posts.html.j2  meta.html.j2  pagination.html.j2  similar_pages.html.j2  tags_filter.html.j2  utils.html.j2
brigid/theme/templates/blocks/: collection.html.j2  images.html.j2  series.html.j2  youtube.html.j2
brigid/theme/tests/: test_templates.py
brigid/theme/tests/jinja_templates/: test_utils.py
brigid/validation/: entities.py  global_validators.py  lists_formatting.py  page_validators.py  validators.py
brigid/validation/tests/: test_global_validators.py  test_lists_formatting.py  test_page_validators.py
changes/: 2024-07-16T13-44-22_0.6.1.md  2024-08-04T10-28-36_0.7.1.md  2024-08-12T10-05-17_0.8.0.md  2024-08-25T17-51-53_0.8.2.md  2024-11-04T11-10-15_0.10.0.md  2025-06-10T18-40-28_0.12.3.md  2025-07-09T09-41-24_0.12.4.md  2025-09-10T10-14-56_0.14.1.md  next_release.md  unreleased.md
default-css/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
default-css/src/: admonitions_block.css  article_base.css  article_blocks.css  article_headers.css  images_block.css  main.css  main_components.css
docker/: Dockerfile
test-content/pages/404/: article.toml
test-content/pages/500/: article.toml
test-content/pages/about/: en.md
test-content/plugins/include/: body_after_content.html.j2  body_before_content.html.j2  head.html.j2
test-content/plugins/include/templates/: body_after_footer.html.j2
test-content/posts/2024-001-basic-rendering/: article.toml  en.md
test-content/posts/2024-002-galery-types/: en.md
test-content/posts/2024-003-wide-article/: article.toml  en.md
test-content/posts/2024-004-test-snippets-1/: article.toml  en.md
test-content/posts/2024-004-test-snippets-1/snippets/: snippet_in_subfolder.md
test-content/posts/2024-005-test-snippets-2/: relative_snippet_1.md
test-content/posts/2024-006-post-in-not-default-language/: ru.md
test-content/posts/2024-007-post-in-two-languages/: en.md  ru.md
test-content/posts/2024-008-tables/: en.md
test-content/posts/2024-02-16-basic-rendering/: en.md
test-content/posts/2024-02-16-galery-types/: article.toml  en.md
test-content/posts/2024-02-16-wide-article/: en.md
test-content/posts/2024-02-22-test-snippets-1/: en.md  relative_snippet_1.md
test-content/posts/2024-02-22-test-snippets-2/: article.toml  en.md  example.py
test-content/posts/2024-03-04-post-in-not-default-language/: article.toml  ru.md
test-content/posts/2024-03-04-post-in-two-languages/: article.toml  en.md  ru.md
test-content/posts/2024-07-16-tables/: article.toml
test-content/posts/2025-001-all-pages-hidden/: article.toml  ru.md
test-content/posts/2025-002-some-pages-are-hidden/: article.toml  en.md
test-content/site/: en.toml  meta.toml  ru.toml
(+4 files in other folders)
