[tool.poetry]
name = "brigid"
version = "0.1"
description = "Static site generator."
# repository = ""
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "0.109.*"
structlog = "24.1.*"

toml = "0.10.*"

pydantic = "2.5.*"
pydantic-settings = "2.1.*"
pillow = "10.2.*"

jinja2 = "3.1.*"
markdown = "3.5.*"
pymdown-extensions = "10.7.*"
python-frontmatter = "1.0.*"
feedgenerator = "2.1.*"

sentry-sdk = "1.39.*"
typer = "0.9.*"

[tool.poetry.dev-dependencies]
watchdog = "3.0.*"

isort = "5.13.*"
black = "24.2.*"

flake8 = "7.0.*"
flake8-docstrings = "1.7.*"
flake8-functions = "0.0.*"
flake8-annotations-complexity = "0.0.*"
flake8-cognitive-complexity = "0.1.*"
flake8-pytest = "1.4.*"
flake8-bandit = "4.1.*"
flake8-absolute-import = "1.0.*"
flake8-print = "5.0.*"
flake8-pyproject = "1.2.*"
flake8-eradicate = "1.5.*"
autoflake = "2.3.*"

mypy = "1.8.*"

[tool.poetry.scripts]
brigid = "brigid.cli.__main__:app"

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[tool.autoflake]
in_place = true
remove_all_unused_imports = true
remove_unused_variables = true
recursive = true

[tool.flake8]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D200",
    "D400",
    "S101",
    "S311",
    "W503",
    "CFQ004",
    "E203",  # blake formats [x:y] with spaves
]
max-line-length = 119